Add more output fields in API
Fixes https://github.com/hiddewie/OpenRailwayMap-vector/issues/78

Example output:
```json
[
  {
    "osm_ids": [
      271777826,
      244129991,
      1787945074,
      1679221136
    ],
    "name": "Landsberger Allee/Petersburger Straße",
    "railway": "tram_stop",
    "railway_ref": null,
    "station": null,
    "uic_ref": null,
    "operator": [],
    "network": [],
    "wikidata": [],
    "wikimedia_commons": [],
    "image": [],
    "mapillary": [],
    "wikipedia": [],
    "note": [],
    "description": [],
    "latitude": 13.446564275,
    "longitude": 52.52637340222645,
    "rank": 32
  },
  {
    "osm_ids": [
      1860777038,
      98878581
    ],
    "name": "S Landsberger Allee",
    "railway": "tram_stop",
    "railway_ref": null,
    "station": null,
    "uic_ref": null,
    "operator": [],
    "network": [],
    "wikidata": [],
    "wikimedia_commons": [],
    "image": [],
    "mapillary": [],
    "wikipedia": [],
    "note": [],
    "description": [],
    "latitude": 13.4564517,
    "longitude": 52.528652549251355,
    "rank": 28
  },
  {
    "osm_ids": [
      3872632789
    ],
    "name": "Landsberger Allee",
    "railway": "station",
    "railway_ref": "BLST",
    "station": "light_rail",
    "uic_ref": "8089020",
    "operator": [
      "DB InfraGO AG"
    ],
    "network": [
      "Verkehrsverbund Berlin-Brandenburg"
    ],
    "wikidata": [
      "Q800507"
    ],
    "wikimedia_commons": [],
    "image": [],
    "mapillary": [],
    "wikipedia": [
      "de:Bahnhof Berlin Landsberger Allee"
    ],
    "note": [],
    "description": [],
    "latitude": 13.454780299999998,
    "longitude": 52.52948199908725,
    "rank": 16
  }
]
```
